apps/production/split-bill-be/envoy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: split-bill-be
  namespace: envoy
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy
      sectionName: splitbill-api
  hostnames:
    - api.splitbill.dta32.my.id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: split-bill-be-service
          namespace: prod
          port: 80
